--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 					<div class="contenido-principal__contenedor">
 						<h1 class="contenido-principal__titulo">Recursos Humanos </h1>
 						<p class="contenido-principal__resumen">
-							 es el Aliado estratetigo de la industria petrolera y petroquimica, al gestionar en PDVSA la cultura del aprendizaje continuo, para transformar a PDVSA en una empresa inteligente, marcando la pauta tanto a nivel local como regional. Recursos Humanos forma parte de la cadena de valor en:.
+							 Aliado estrategico de la industria petrolera y petroquimica nacional, al gestionar con la cultura del aprendizaje continuo, la transformación de PDVSA en una empresa inteligente, marcando pauta a nivel local y regional. El talento de Recursos Humanos se fundamenta en el negocio en:
 						</p>
 					</div>
 				</header>
