--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 					<div class="contenido-principal__contenedor">
 						<h1 class="contenido-principal__titulo">Recursos Humanos </h1>
 						<p class="contenido-principal__resumen">
-							 Aliado estrategico de la industria petrolera y petroquimica nacional, al gestionar con la cultura del aprendizaje continuo, la transformación de PDVSA en una empresa inteligente, marcando pauta a nivel local y regional. El talento de Recursos Humanos se fundamenta en el negocio en:
+							 Aliado estrategico de la industria petrolera y petroquÍmica nacional, al gestionar la cultura empresarial del aprendizaje continuo, para transformar a "PDVSA EN UNA EMPRESA INTELIGENTE", la cual establece pautas a nivel local y regional. Nuestro talento Humano se distribuye en la industria en los siguientes sectores:
 						</p>
 					</div>
 				</header>
