--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 					<div class="contenido-principal__contenedor">
 						<h1 class="contenido-principal__titulo">Recursos Humanos </h1>
 						<p class="contenido-principal__resumen">
-							 Aliado estrategico de la industria petrolera y petroquÍmica nacional, al gestionar la cultura empresarial del aprendizaje continuo, para transformar a "PDVSA EN UNA EMPRESA INTELIGENTE", la cual establece pautas a nivel local y regional. Nuestro talento Humano se distribuye en la industria en los siguientes sectores:
+							 Nuestra gente de la industria petrolera y petroquÍmica nacional, es nuestro mayor activo estrategico. Con su ingenio y creatividad enfrentamos complejos desafíos, para transformar a "PDVSA EN UNA EMPRESA INTELIGENTE", la cual establece pautas a nivel local y regional. Nuestro historia se sustenta en los logros de solucionadores de problemas en los siguientes sectores:
 						</p>
 					</div>
 				</header>
