--- a/proyecto07.html
+++ b/proyecto07.html
@@ -18,7 +18,7 @@
 		<!---ENCABEZADO DE LA PAGINA --->
 			<div class="contenedor">
 				<header class="contenido-principal">
-					<img loading="lazy" src="img/proyectos/07.webp" alt="" class="contenido-principal__imagen">
+					<img loading="lazy" src="img/Proyectos/07.webp" alt="" class="contenido-principal__imagen">
 					<div class="contenido-principal__contenedor">
 						<h1 class="contenido-principal__titulo">ALDEA UNIVERSITARIA e INCE</h1>
 						<p class="contenido-principal__resumen">
