--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 					<div class="contenido-principal__contenedor">
 						<h1 class="contenido-principal__titulo">NUESTRO CONSEJO COMUNAL</h1>
 						<p class="contenido-principal__resumen">
-							 Debe ser acogedor, debe dar respuesta a nuestras necesidades, socialmente equilibrado, ecológicamente sostenible, donde se promueva la inversión en obras perdurables para nuestra comunidad: con ordenanzas y actividades cívicas las cuales reflejan nuestra cultura y su composición demográfica, en concordancia con las potencialidades de nuestro sector. Los proyectos son producto del trabajo, del conocimiento humano, del conjunto de ideas los cuales potencian nuestro crecimiento económico para eliminar el marginalismo. En definitiva, es un contenedor de vida urbana y rural el cual se sustenta en los siguientes PROYECTOS EMBLEMATICOS:
+							 Debe ser acogedor, debe dar respuesta a nuestras necesidades, socialmente equilibrado, ecológicamente sostenible, donde se promueva la inversión en obras perdurables para nuestra comunidad: con ordenanzas y actividades cívicas las cuales reflejan nuestra cultura y su composición demográfica, en concordancia con las potencialidades de nuestro sector. Los proyectos son producto del trabajo, del conocimiento humano, del conjunto de ideas los cuales potencian nuestro crecimiento económico para eliminar el marginalismo. En definitiva, es un contenedor de vida urbana y rural el cual se sustenta en los siguientes 10 PROYECTOS EMBLEMATICOS:
 						</p>
 					</div>
 				</header>
@@ -49,33 +49,42 @@
 								<p>CORREDOR TURISTICO</p>
 							</div>
 							<div class="carousel__elemento">
-								<a href="proyecto02.html"><img loading="lazy" src="img/3.webp" alt="Producción"></a> 
+								<a href="proyecto02.html"><img loading="lazy" src="img/3.webp" alt="Cecom"></a> 
 								<p>EPSD CECOM SEGURIDAD</p>
 							</div>
 							<div class="carousel__elemento">
-								<a href="proyecto03.html"><img loading="lazy" src="img/4.webp" alt="Refinación"></a> 
+								<a href="proyecto03.html"><img loading="lazy" src="img/4.webp" alt="Cachama"></a> 
 								<p>EPSD AGROPEDIA - CACHAMA</p>
 							</div>
 							<div class="carousel__elemento">
-								<a href="proyecto04.html"><img loading="lazy" src="img/5.webp" alt="Comercialización"></a> 
+								<a href="proyecto04.html"><img loading="lazy" src="img/5.webp" alt="Hortalizas"></a> 
 								<p>EPSD HORTALIZAS HIDROPINICAS</p>
 							</div>
 							<div class="carousel__elemento">
-								<a href="proyecto05.html"><img loading="lazy" src="img/6.webp" alt="Petroquimicas"></a> 
+								<a href="proyecto05.html"><img loading="lazy" src="img/6.webp" alt="Infocentro"></a> 
 								<p>EPSD INFOCENTRO - TV Y RADIO</p>
 							</div>
 							<div class="carousel__elemento">
-								<a href="proyecto06.html"><img loading="lazy" src="img/7.webp" alt="Empresas Mixtas"></a> 
+								<a href="proyecto06.html"><img loading="lazy" src="img/7.webp" alt="Reciclaje"></a> 
 								<p>EPSD RECICLAJE</p>
 							</div>
 							<div class="carousel__elemento">
-								<a href="proyecto07.html"><img loading="lazy" src="img/8.webp" alt="Estaciones de servicio"></a> 
+								<a href="proyecto07.html"><img loading="lazy" src="img/8.webp" alt="Aldea e Ince"></a> 
 								<p>ALDEA UNIVERSITARIA</p>
 							</div>
 							<div class="carousel__elemento">
-								<a href="proyecto08.html"><img loading="lazy" src="img/9.webp" alt="Harmony Tower"></a> 
+								<a href="proyecto08.html"><img loading="lazy" src="img/9.webp" alt="Administradora"></a> 
 								<p>EPSD ADMINISTRADORA CONDOMINIOS</p>
 							</div>
+							<div class="carousel__elemento">
+								<a href="proyecto09.html"><img loading="lazy" src="img/10.webp" alt="Tv"></a> 
+								<p>EPSD TV INTERNET VALLE ARRIBA </p>
+							</div>
+							<div class="carousel__elemento">
+								<a href="proyecto10.html"><img loading="lazy" src="img/11.webp" alt="HRadio"></a> 
+								<p>EPSD RADIO INTERNET VALLE ARRIBA</p>
+							</div>
+
 						</div>
 
 						<button aria-label="Siguiente" class="carousel__siguiente">
