--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 					<div class="contenido-principal__contenedor">
 						<h1 class="contenido-principal__titulo">NUESTRO CONSEJO COMUNAL</h1>
 						<p class="contenido-principal__resumen">
-							 Debe ser acogedor, debe dar respuesta a nuestras necesidades, socialmente equilibrado, ecológicamente sostenible, donde se promueva la inversión en obras perdurables para nuestra comunidad: con ordenanzas y actividades cívicas las cuales reflejan nuestra cultura y su composición demográfica, en concordancia con las potencialidades de nuestro sector. Los proyectos son producto del trabajo, del conocimiento humano, del conjunto de ideas los cuales potencian nuestro crecimiento económico para eliminar el marginalismo. En definitiva, es un contenedor de vida urbana y rural el cual se sustenta en los siguientes 10 PROYECTOS EMBLEMATICOS:
+							 Debe ser acogedor, debe dar respuesta a nuestras necesidades, socialmente equilibrado, ecológicamente sostenible, donde se promueva la inversión en obras perdurables para nuestra comunidad: con ordenanzas y actividades cívicas las cuales reflejan nuestra cultura y su composición demográfica, en concordancia con las potencialidades de nuestro sector. Los proyectos son producto del trabajo, del conocimiento humano, del conjunto de ideas los cuales potencian nuestro crecimiento económico para eliminar el marginalismo. En definitiva, es un contenedor de vida urbana y rural el cual se sustenta en los siguientes 11 PROYECTOS EMBLEMATICOS:
 						</p>
 					</div>
 				</header>
@@ -236,12 +236,12 @@
 		<footer class="footer">
             <div class="container">
                 <div class="about-us" data-aos="fade-right" data-aos-delay="200">
-                    <h2>Nosotros</h2>
-                    <p>Pretendemos crear una Reputación producto de nuestro trabajo y la medimos de acuerdo al cumplimiento de nuestros objetivos.</p>
+                    <a href="Qsomos.html"><h2>Nosotros</h2></a>
+                    <p>Pretendemos crear una reputación producto de nuestro trabajo y la medimos de acuerdo al cumplimiento de nuestros objetivos.</p>
                 </div>
                 <div class="newsletter" data-aos="fade-right" data-aos-delay="200">
                     <h2>Boletin informativo</h2>
-                    <p>La razón de este Boletin Digital es básicamente una herramienta de evaluación. Con la finalidad de dar transparencia a la gestión del Consejo Comunal con algo innovador..</p>
+                    <p>Este es un espacios de comunicación informativa respecto a las oportunidades de mejoras actuales y futuras del Consejo Comunal Girazoles de Zamora.</p>
                 </div>
 
                 <div class="follow" data-aos="fade-left" data-aos-delay="200">
