--- a/index.html
+++ b/index.html
@@ -49,6 +49,11 @@
 								<p>CORREDOR TURISTICO</p>
 							</div>
 							<div class="carousel__elemento">
+								<a href="proyecto12
+								.html"><img loading="lazy" src="img/13.webp" alt="Corredor Turistico"></a> 
+								<p>AGUA POTABLE POZO CCGZ</p>
+							</div>
+							<div class="carousel__elemento">
 								<a href="proyecto02.html"><img loading="lazy" src="img/3.webp" alt="Cecom"></a> 
 								<p>EPSD SEGURIDAD y DEFENSA</p>
 							</div>
